public static class MyNotes
{
    public static string VariablesPageOne =
@"...
In the vast savannah of computer memory, a remarkable phenomenon occurs. 
Behold, the magnificent 'variables' – they are the vessels of information, the heart of computation. 
They bear names, bestowed upon them with care, starting only with letters or the humble underscore. 
But tread with caution, for certain names are forbidden, like 'int', 'string', and 'bool'. 
With the gentle touch of the '=' operator, values are imbued unto these variables. 
And lo, their types can be declared, like incantations, as in 'type variableName = value;'. 
Observe: 
 int age = 32;
 string name = ""Jesper"";
 float awesomeLevel = 99.9f;
 bool TooCoolForSchool = false;
";

    public static string VariablesPageTwo =
@"...
So often used without consideration for its magnificence, the humble 'variable' is the heart of computation. 
It can be used to store and manipulate data, and is the backbone of all computer programs. 
The 'variable' is a named container for a value, and can be of different types. 
The type of a variable determines what kind of value it can hold, and what kind of operations can be performed on it. 
There are many different types of variables, but the most common ones are 'int', 'string', 'float', and 'bool'. 
An 'int' is a whole number, like 1, 2, 3, 4, 5, 6, 7, 8, 9, 0. 
A 'string' is a sequence of characters, like ""Hello World"", ""I am a string"", and ""C# is awesome"". 
A 'float' is a decimal number, like 1.234, 5.678, and 9.101112. 
A 'bool' is a true or false value, like true and false. ";

}